src/objects/BT_CO_AGD_EINVOICE__c.object
<CustomObject>
    <description>For Intergration Development purposes.  Do not delete.</description>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <label>Batch Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>business_unit__c</fullName>
        <description>business unit</description>
        <label>business unit</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoice_date__c</fullName>
        <description>invoice date</description>
        <label>invoice date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoice_number__c</fullName>
        <description>invoice number</description>
        <label>invoice number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>remarks__c</fullName>
        <description>remarks</description>
        <label>remarks</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vendor_id__c</fullName>
        <label>vendor id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>BT_CO_AGD_EINVOICE</label>
    <nameField>
        <label>BT_CO_AGD_EINVOICE Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CO_AGD_EINVOICES</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>